- added data like Spectral count in Protein Groups - fixed different bugs - speed up of SQL statements for collecting data of Protein Groups #5938