@@ -4,6 +4,7 @@
  */
 package fr.proline.studio.rsmexplorer.gui.model;
 
+import fr.proline.core.orm.msi.BioSequence;
 import fr.proline.core.orm.msi.ProteinMatch;
 import fr.proline.core.orm.msi.ProteinSet;
 import javax.swing.table.AbstractTableModel;
@@ -14,10 +15,12 @@ import javax.swing.table.AbstractTableModel;
  */
 public class ProteinTableModel extends AbstractTableModel {
 
-    public static final int COLTYPE_PROTEIN_NAME = 0;
-    public static final int COLTYPE_SAMESET_SUBSET = 1;
-    public static final int COLTYPE_PROTEIN_SCORE = 2;
-    private static final String[] columnNames = {"Protein", "Same Set", "Score"};
+    public static final int COLTYPE_PROTEIN_NAME           = 0;
+    public static final int COLTYPE_SAMESET_SUBSET         = 1;
+    public static final int COLTYPE_PROTEIN_SCORE          = 2;
+    public static final int COLTYPE_PROTEIN_PEPTIDES_COUNT = 3;
+    public static final int COLTYPE_PROTEIN_MASS           = 4;
+    private static final String[] columnNames = {"Protein", "Same Set", "Score", "Peptides", "Mass"};
     private ProteinMatch[] sameSetMatches = null;
     private ProteinMatch[] subSetMatches = null;
 
@@ -49,6 +52,10 @@ public class ProteinTableModel extends AbstractTableModel {
                 return Boolean.class;
             case COLTYPE_PROTEIN_SCORE:
                 return Float.class;
+            case COLTYPE_PROTEIN_PEPTIDES_COUNT:
+                return Integer.class;
+            case COLTYPE_PROTEIN_MASS:
+                return String.class;
         }
         return null;
     }
@@ -76,7 +83,15 @@ public class ProteinTableModel extends AbstractTableModel {
                     return Boolean.FALSE;
                 }
             case COLTYPE_PROTEIN_SCORE:
-                return new Float(proteinMatch.getScore());
+                return Float.valueOf(proteinMatch.getScore());
+            case COLTYPE_PROTEIN_PEPTIDES_COUNT:
+                return Integer.valueOf(proteinMatch.getPeptideCount());
+            case COLTYPE_PROTEIN_MASS:
+                double mass =proteinMatch.getTransientMass();
+                if (mass < 0) {
+                    return "";
+                }
+                return String.valueOf(mass);
         }
         return null; // should never happen
     }
